--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,26 @@
 ---
 # handlers file for ansible-gitea
+
+- name: "systemd deamon reload"
+  systemd:
+    daemon_reload: yes
+  become: true
+
+- name: "gitea restarted"
+  become: true
+  systemd:
+    name: gitea.service
+    state: restarted
+
+- name: "enable service httpd and ensure it is not masked"
+  systemd:
+    name: gitea.service
+    enabled: yes
+    masked: no
+  become: true
+
+- name: "fail2ban restart"
+  systemd:
+    name: fail2ban.service
+    state: restarted
+  become: true
